# jjba

./: .gitignore  .gitlab-ci.yml  Makefile  README.org  cabal.project  flake.nix  guru-pages.toml  jjba.cabal  stack.yaml
app/: Main.hs
projects/blog/: index.org
projects/blog/articles/ci/: index.org  shared-libraries-with-jenkins.org
projects/blog/articles/development/: a-great-programmer.org  black-box-testing.org  breaking-free-of-javascript.org  german-naming-convention.org  getting-rid-of-git-history.org  index.org  sql-select-all.org  ssr-wins-over-javascript.org  system-interaction-model.org  tech-radar.org
projects/blog/articles/emacs/: emacs-and-scala-setup-with-eglot.org  emacs-for-absolute-begginners.org  emacs-registers.org  index.org
projects/blog/articles/freebsd/: index.org  jails-with-a-loopback-ip.org  pkg-or-ports.org  practical-rcd-scripting-and-go.org  rcd-scripting.org  root-on-zfs-with-partitions.org  running-postgresql-on-freebsd.org  updating-freebsd-in-iocage.org
projects/blog/articles/gnu-linux/: arch-linux-uefi-encryption.org  gnu-guix-virtual-machine-image-aarch64.org  increase-the-file-descriptor-limit-on-gnu-linux.org  index.org  openvpn3-on-nixos-with-web-based-saml.org  openvpn3-on-voidlinux.org  windows-11-bootable-usb-from-gnu-linux.org
projects/blog/articles/go/: file-descriptors-and-go.org  how-i-write-http-services.org  index.org  make-or-new.org  opinionated-style-guide.org  project-structure.org  sql-transactions.org  tips-for-clean-code-with-go.org  zen-of-go.org
projects/blog/articles/haskell/: free-alacarte.org  haskell-in-production-at-foxdown-systems.org  index.org  running-hoogle-locally.org  type-safety-back-and-forth.org  why-haskell-is-important.org
projects/blog/articles/personal/: brief-aan-mijzelf.org  index.org
projects/cv/: index.html
projects/home/: index.org
resources/css/: code-highlight-pandoc.css  fonts.css
resources/js/: tailwind.config.js
src/: Lib.hs
src/GuruPages/: HtmlPage.hs  Model.hs
src/GuruPages/Clock/: LiveClock.hs
src/GuruPages/Configurator/: FromFileConfigurator.hs
src/GuruPages/DataSource/: OrgFilesDataSource.hs
src/GuruPages/Free/: Clock.hs  Configurator.hs  DataSource.hs  Log.hs  Storage.hs
src/GuruPages/Log/: ConsoleLog.hs
src/GuruPages/Storage/: Filesystem.hs
